--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/vite": "^4.1.5",
-    "nuxt": "^3.17.2",
+    "nuxt": "^3.16.2",
+    "nuxt-aos": "^1.2.5",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@hypernym/nuxt-gsap": "^2.4.3"
+    "@hypernym/nuxt-gsap": "^2.4.3",
+    "@types/aos": "^3.0.7"
   }
 }
