--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "nuxt": "^3.16.2",
     "nuxt-aos": "^1.2.5",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@hypernym/nuxt-gsap": "^2.4.3",
+    "@sidebase/nuxt-auth": "^0.10.1",
     "@types/aos": "^3.0.7"
   }
 }
